tests/NormalTests/paczka2/big_fuzzy/60958557.err
Error in line 8: qnaR7JBzop S540 -1,9
Error in line 6: qnaR7JBzop S540 5,2
Error in line 21: dj0Vmq S137 21,79
Error in line 16: M7Vc4LizovS S197 8,8
Error in line 9: dj0Vmq S540 17,0
Error in line 40: GdrFmajV AÖ50 94,5
Error in line 42: qnaR7JBzop S17 71,8
Error in line 43: qnaR7JBzop S137 221,9
Error in line 41: M7Vc4LizovS A750 81,5
Error in line 45: M7Vc4LizovS S197 46,7
Error in line 36: dj0Vmq S137 55,0
Error in line 24: A750 A750 25,3
Error in line 55: dj0Vmq S197 5=,0
Error in line 54: M7Vc4LizovS S197 35,5
Error in line 60: qnaR7JBzop S540 4,8
Error in line 50: dj0Vmq S197 44,6
Error in line 69: ByY S137 96,0
Error in line 82: JM0T A750 71,5
Error in line 87: ByY S197 6,,,
Error in line 94: qnaR7JBzop S540 31,8
Error in line 99: qnaR7JBzop S137 34,0
Error in line 101: M7Vc4LizovS S137 8,8
Error in line 91: ByY S197 38,0
Error in line 124: dj0Vmq A750 98,7
Error in line 102: qnaR7JBzop A750 53,9
Error in line 132: A750 S540 78,6
Error in line 136: ByY A750 31,1
Error in line 133: A750 A750 22,4
Error in line 138: ByY S540 70,6
Error in line 155: ByY S137 16,8
Error in line 160: M7Vc4LizovS A750 799,4
Error in line 180: qnaR7JBzop A750 64,7
Error in line 169: M7Vc4LizovS S197 72,7
Error in line 183: ByY S540 85,1
Error in line 186: JM0T S137 64,2
Error in line 184: ByY S197 17,9
Error in line 201: M7Vc4LizovS S197 56,7
Error in line 231: M7Vc4LizovS S197 89,7
Error in line 237: A750 S137 18,8
